--- a/part_4/Cargo.toml
+++ b/part_4/Cargo.toml
@@ -13,6 +13,7 @@ critical-section = "1.2.0"
 msp430-atomic = "0.1.5"
 
 msp430fr2x5x-hal = "0.5"
+bmp390 = {version = "0.4.1", features = ["sync"]}
 
 [profile.release]
 lto = "fat"
